load("//tools:defaults.bzl", "ng_module", "ng_package", "ng_web_test_suite")
load("//tools:defaults2.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "material-date-fns-adapter",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//src:dev_mode_types",
        "//src/material/core",
        "@npm//@angular/core",
        "@npm//date-fns",
    ],
)

ts_project(
    name = "unit_test_sources",
    testonly = True,
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/*.e2e.spec.ts"],
    ),
    interop_deps = [
        ":material-date-fns-adapter",
        "//src/material/core",
    ],
    deps = [
        "//:node_modules/@angular/core",
        "//:node_modules/date-fns",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [
        ":unit_test_sources",
    ],
)

ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    nested_packages = ["//src/material-date-fns-adapter/schematics:npm_package"],
    tags = ["release-package"],
    deps = [":material-date-fns-adapter"],
)
