load(
    "//src/material-experimental:config.bzl",
    "MATERIAL_EXPERIMENTAL_SCSS_LIBS",
    "MATERIAL_EXPERIMENTAL_TARGETS",
    "MATERIAL_EXPERIMENTAL_TESTING_TARGETS",
)
load("//tools:defaults.bzl", "ng_package", "sass_library", "ts_library")
load("@npm//tsec:index.bzl", "tsec_test")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "material-experimental",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = ["@npm//@angular/core"],
)

tsec_test(
    name = "material-experimental_tsec_test",
    target = "material-experimental",
    tsconfig = "//src:tsec_config",
)

sass_library(
    name = "theming_scss_lib",
    srcs = MATERIAL_EXPERIMENTAL_SCSS_LIBS + [
        "//src/material-experimental/mdc-color",
        "//src/material-experimental/mdc-density",
        "//src/material-experimental/mdc-helpers",
        "//src/material-experimental/mdc-theming",
        "//src/material-experimental/mdc-typography",
    ],
)

sass_library(
    name = "theming_bundle",
    srcs = ["_index.scss"],
    deps = [":theming_scss_lib"],
)

ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    data = [
        ":theming_bundle",
        ":theming_scss_lib",
    ],
    tags = ["release-package"],
    deps = MATERIAL_EXPERIMENTAL_TARGETS + MATERIAL_EXPERIMENTAL_TESTING_TARGETS,
)
